changed everything to itcss

--- a/index.html
+++ b/index.html
@@ -4,28 +4,27 @@ title: Homepage
 section: home
 ---
 
-<section class="c-site-intro holder">
-	<div class="row">
-		<div class="col">
+<section class="o-layout__holder  c-intro">
+	<div class="o-layout__row">
+		<div class="o-layout__item">
 			<!-- <h1>I design &amp; build interfaces for the web</h1> -->
-			<p class="intro__p content">
-				I'm a web designer based in Bruges, Belgium with over 8 years experience.
-				I design and build rich, usable, responsive web interfaces, specialising in frontend-design, HTML &amp; CSS and web typography. 
+			<p class="intro__p">
+				<!-- I'm a web designer based in Bruges, Belgium. I have over 8 years extensive experience in designing. -->
+				I design and build rich, usable, device-agnostic interfaces for the web. My main focus is on responsive frontend-design, HTML &amp; CSS and web typography. 
 			</p>
 		</div>
 	</div>
 </section>
-<section class="c-site-main holder">
-	<div class="row">
-		<div class="bp3-grid-6 bp4-grid-4 col">		
-			<p>
-				
+<section class="o-layout__holder">
+	<div class="o-layout__row">
+		<div class="o-layout__item u-1/2-md">		
+			<p>				
 				<a href="#">Twitter</a> <br>
 				<a href="#">Dribble</a> <br>
 				<a href="#">Linkedin</a>
 			</p>
 		</div>
-		<div class="bp3-grid-6 col">
+		<div class="o-layout__item u-1/2-md">
 			<p>
 				<a href="mailto:hallo@coudeville.be">hallo@coudeville.be</a> <br>
 				<a href="mailto:hallo@coudeville.be">+32 474 777568</a> <br>
